2012-10-01  Dehao Chen  <dehao@google.com>

	PR middle-end/54759
	* gcc/tree-vect-loop-manip.c (slpeel_make_loop_iterate_ntimes): Use
	LOCATION_LOCUS to compare with UNKNOWN_LOCATION.
	(slpeel_tree_peel_loop_to_edge): Likewise.
	* gcc/tree-vectorizer.c (vectorize_loops): Likewise.

2012-10-01  Andrew MacLeod  <amacleod@redhat.com>

	PR target/54087
	* optabs.c (expand_atomic_fetch_op_no_fallback): New.  Factored code
	from expand_atomic_fetch_op.
	(expand_atomic_fetch_op):  Try atomic_{add|sub} operations in terms of
	the other one if direct opcode fails.

2012-10-01  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/54457
	* simplify-rtx.c (simplify_subreg):
	Simplify (subreg:M (op:N ((x:N) (y:N)), 0)
	to (op:M (subreg:M (x:N) 0) (subreg:M (x:N) 0)), where
	the outer subreg is effectively a truncation to the original mode M.

2012-10-01  Richard Guenther  <rguenther@suse.de>

	* builtins.def (ATTR_MATHFN_FPROUNDING): Do not use no-vops
	with -frounding-math.
	* builtin-attrs.def (ATTR_PURE_NOTHROW_NOVOPS_LIST): Remove.
	(ATTR_PURE_NOTHROW_NOVOPS_LEAF_LIST): Likewise.

2012-10-01  Eric Botcazou  <ebotcazou@adacore.com>

	* tree.h (copy_mem_ref_info): Delete.
	* tree-ssa-address.c (copy_mem_ref_info): Likewise.
	(maybe_fold_tmr): Copy flags manually.
	* tree-ssa-loop-im.c (simple_mem_ref_in_stmt): Rewrite.

2012-10-01  Marc Glisse  <marc.glisse@inria.fr>

	* simplify-rtx.c (simplify_binary_operation_1) <VEC_SELECT>:
	Detect the identity.
	<VEC_CONCAT>: Handle VEC_SELECTs from the same vector.

2012-10-01  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/50457
	* config/sh/sh.opt (matomic-model): New option.
	(msoft-atomic): Mark as deprecated and alias to matomic-model=soft-gusa.
	(mhard-atomic): Delete.
	* config/sh/predicates.md (gbr_displacement): New predicate.
	* config/sh/sh-protos.h (sh_atomic_model): New struct.
	(selected_atomic_model): New declaration.
	(TARGET_ATOMIC_ANY, TARGET_ATOMIC_STRICT, TARGET_ATOMIC_SOFT_GUSA,