@@ -1,3 +1,11 @@
+2012-10-01  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* config/rs6000/rs6000.c (toplevel): Include dumpfile.h.
+	(rs6000_density_test): Rework to accomidate 09-30 change by Sharad
+	Singhai.
+
+	* config/rs6000/t-rs6000 (rs6000.o): Add dumpfile.h dependency.
+
 2012-10-01  Dehao Chen  <dehao@google.com>
 
 	PR middle-end/54759
